# svg-darkmode

./: README.md  pyproject.toml  task.yml
.github/workflows/: test.yml
svg_darkmode/: main.py  svg.py
tests/: test_main.py  test_svg.py
