[tool.poetry]
name = "svg-darkmode"
version = "0.1.0"
description = "Add css style to invert colours based on prefers-color-scheme"
authors = ["Martijn Bonajo <m.bonajo@fontys.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
