[tool.poetry]
name = "svg-darkmode"
version = "1.0.0"
description = "Add css style to invert colours based on prefers-color-scheme"
authors = ["Martijn Bonajo <m.bonajo@fontys.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
prepare-toolbox = "^0.4.0"
beautifulsoup4 = "^4.12.2"
lxml = "^5.3.0"
cssutils = "^2.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
